--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,17 @@ volumes:
 
 services:
   db:
-    image: postgres:13
+    image: postgres:13.10
+    env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
     build: ./backend/
     env_file: .env
+    volumes:
+      - static:/backend_static
+    depends_on:
+      - db
   frontend:
     env_file: .env
     build: ./frontend/
@@ -24,4 +29,4 @@ services:
     ports:
       - 9000:80
     volumes:
-      - static:/static
+      - static:/staticfiles/
