--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,11 @@
 name: Main Taski workflow
-
 on:
   push:
     branches:
       - main
-
 jobs:
   tests:
-    # Разворачиваем окружение:
     runs-on: ubuntu-latest
-
     services:
       postgres:
         image: postgres:13.10
@@ -20,24 +16,18 @@ jobs:
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-
     steps:
-    # Копируем код проекта
     - name: Check out code
       uses: actions/checkout@v3
-    # Устанавливаем Python с помощью action
     - name: Set up Python
       uses: actions/setup-python@v4
-    # В action setup-python@v4 передаём параметр — версию Python
       with:
         python-version: 3.9
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
         pip install flake8==6.0.0 flake8-isort==6.0.0
         pip install -r ./backend/requirements.txt 
-
     - name: Test with flake8 and django tests
       env:
         POSTGRES_USER: django_user
@@ -51,3 +41,23 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
+  build_and_push_to_docker_hub:
+    name: Push Docker image to DockerHub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend/
+          push: true
+          tags: lisinavalentina97325/taski_backend:latest 
