--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,6 +3,7 @@ version: '3'
 volumes:
   pg_data_production:
   static_volume:
+  media:
 
 services:
   db:
@@ -15,6 +16,9 @@ services:
     env_file: .env
     volumes:
       - static_volume:/backend_static
+      - media:/app/media/
+    depends_on:
+      - db
   frontend:
     image: lisinavalentina97325/kittygram_final-frontend
     env_file: .env
@@ -26,5 +30,8 @@ services:
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
+      - media:/app/media/
+    depends_on:
+      - backend
     ports:
       - 9000:80
