--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     env_file: .env
     volumes:
       - static:/backend_static
+      - media:/media
     depends_on:
       - db
   frontend:
@@ -30,3 +31,6 @@ services:
       - 9000:80
     volumes:
       - static:/staticfiles/
+      - media:/media
+    depends_on:
+      - backend
